clusters/9ka/vwsfriend/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vwsfriend
  labels:
    app.kubernetes.io/name: vwsfriend
    app.kubernetes.io/version: 0.24.7
spec:
  serviceName: vwsfriend
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: vwsfriend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vwsfriend
    spec:
      containers:
      - name: vwsfriend
        image: ghcr.io/tillsteinbach/vwsfriend:0.24.10
        ports:
        - containerPort: 4000
          name: http
        startupProbe:
          httpGet:
            port: http
            path: /healthcheck
          failureThreshold: 120
          periodSeconds: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            port: http
            path: /healthcheck
          failureThreshold: 3
          periodSeconds: 10
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            port: http
            path: /healthcheck
          failureThreshold: 3
          periodSeconds: 10
          timeoutSeconds: 1
        volumeMounts:
        - name: config
          mountPath: /config
        resources:
          limits:
            cpu: 250m
            memory: 300Mi
          requests:
            cpu: 10m
            memory: 192Mi
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ ReadWriteOnce ]
      storageClassName: proxmox-zfs-nvme
      resources:
        requests:
          storage: 128Mi
