clusters/9ka/vwsfriend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vwsfriend
  namespace: vwsfriend
  labels:
    app.kubernetes.io/name: vwsfriend
spec:
  ports:
  - port: 80
    name: http
    targetPort: http
  selector:
    app.kubernetes.io/name: vwsfriend
